objects/Lead.object
<CustomObject>
    <fields>
        <fullName>EBQ_Rating__c</fullName>
        <label>EBQ Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>86</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Rep2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBQ Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBQ_Touches__c</fullName>
        <formula>CASE( EBQ_Cadence__c,
&quot;A1&quot;, 1,
&quot;A2&quot;, 2,
&quot;A3&quot;, 3,
&quot;A4&quot;, 4,
&quot;A5&quot;, 5,
&quot;B1&quot;, 6,
&quot;B2&quot;, 7,
&quot;B3&quot;, 8,
&quot;B4&quot;, 9,
&quot;B5&quot;, 10,
&quot;C1&quot;, 11,
&quot;C2&quot;, 12,
&quot;C3&quot;, 13,
&quot;C4&quot;, 14,
&quot;C5&quot;, 15,
&quot;D1&quot;, 16,
&quot;D2&quot;, 17,
&quot;D3&quot;, 18,
&quot;D4&quot;, 19,
&quot;D5&quot;, 20,
&quot;E1&quot;, 21,
&quot;E2&quot;, 22,
&quot;E3&quot;, 23,
&quot;E4&quot;, 24,
&quot;E5&quot;, 25,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBQ Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Score__c</fullName>
        <description>This Field is used for Outreach Integration with SFDC</description>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold / Not Started</fullName>
                </value>
                <value>
                    <fullName>Approaching</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FB_Date_Added__c</fullName>
        <label>FB Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FB_Person_City__c</fullName>
        <label>FB Person City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Country__c</fullName>
        <label>FB Person Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Email__c</fullName>
        <label>FB Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FB_Person_FirstName__c</fullName>
        <label>FB Person FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_LastName__c</fullName>
        <label>FB Person LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Linkedin__c</fullName>
        <label>FB Person Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FB_Person_Role_Description__c</fullName>
        <label>FB Person Role Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FB_Person_State__c</fullName>
        <label>FB Person State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Tenure__c</fullName>
        <label>FB Person Tenure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Person_Tilte__c</fullName>
        <label>FB Person Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Email_Received__c</fullName>
        <label>First Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Email_Sent__c</fullName>
        <label>First Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fortella_Buyer_Persona__c</fullName>
        <inlineHelpText>This persona that Fortella platform standardizes based on job level and function</inlineHelpText>
        <label>Fortella Buyer Persona</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunnelBeam_Enrichment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FunnelBeam Enrichment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_UUID__c</fullName>
        <externalId>true</externalId>
        <label>G2 UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_Buyer_Intent__c</fullName>
        <formula>G2_Event__r.G2Crowd__Tag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G2 Buyer Intent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Event</label>
        <referenceTo>G2Crowd__G2_Event__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2_Related_Event_Lead_Tag__c</fullName>
        <formula>IF(
FirstName &amp; &apos; &apos; &amp; LastName == G2_Related_Event__r.G2Crowd__Lead__c ,
G2_Related_Event__r.G2Crowd__G2_Event__c,
G2_Related_Event__r.G2Crowd__Lead__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G2 Related Event Lead Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_Related_Event_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Related Event Lead</label>
        <referenceTo>G2Crowd__G2_Related_Event__c</referenceTo>
        <relationshipLabel>Leads (G2 Related Event Lead)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>G2_Related_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G2 Related Event</label>
        <referenceTo>G2Crowd__G2_Related_Event__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Analytics Tracking ID</description>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Company_FT_Global_500_Rank__c</fullName>
        <label>Global Company FT Global 500 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Company_Fortune_1000_Rank__c</fullName>
        <label>Global Company Fortune 1000 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Company_Name__c</fullName>
        <label>Global Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Company_Success_Champion__c</fullName>
        <label>Global Company Success Champion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Company_Success_Lead__c</fullName>
        <label>Global Company Success Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KickBox_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KickBox Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Accept_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Accept All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Did_You_Mean__c</fullName>
        <label>Kickbox Did You Mean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickbox_Disposable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Disposable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Reason__c</fullName>
        <label>Kickbox Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>low_deliverability</fullName>
                </value>
                <value>
                    <fullName>accepted_email</fullName>
                </value>
                <value>
                    <fullName>low_quality</fullName>
                </value>
                <value>
                    <fullName>rejected_email</fullName>
                </value>
                <value>
                    <fullName>unavailable_smtp</fullName>
                </value>
                <value>
                    <fullName>no_connect</fullName>
                </value>
                <value>
                    <fullName>invalid_domain</fullName>
                </value>
                <value>
                    <fullName>unexpected_error</fullName>
                </value>
                <value>
                    <fullName>timeout</fullName>
                </value>
                <value>
                    <fullName>invalid_email</fullName>
                </value>
                <value>
                    <fullName>invalid_smtp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickbox_Result__c</fullName>
        <label>Kickbox Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>risky</fullName>
                </value>
                <value>
                    <fullName>deliverable</fullName>
                </value>
                <value>
                    <fullName>undeliverable</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickbox_Sendex__c</fullName>
        <label>Kickbox Sendex</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_In__c</fullName>
        <label>Last Call In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Out__c</fullName>
        <label>Last Call Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Data_Alert_Found__c</fullName>
        <label>Last Data Alert Found</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Meeting__c</fullName>
        <label>Last Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>This field is used in the formula field Round_Robin_ID to assign leads to different people automatically with assignment rules.</description>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Request__c</fullName>
        <label>Lead Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Used to get a granular look at our EBQ campaigns for each lead source and across both leads and contacts.</description>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_the_Business__c</fullName>
        <label>Left the Business</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label># Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lusha__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lusha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the Lead is MQL</description>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketer_comments__c</fullName>
        <label>Marketer comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketer_status__c</fullName>
        <label>Marketer status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CREATE</fullName>
                </value>
                <value>
                    <fullName>UPDATE</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>NO CHANGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Email_Filter__c</fullName>
        <formula>ISBLANK(EmailBouncedDate)</formula>
        <label>Mass Email Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Type_CP__c</fullName>
        <description>Meeting Type (as setup under Meeting Types - Templates)</description>
        <label>Meeting Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Contact__c</fullName>
        <label>Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Meeting__c</fullName>
        <label>Next Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <inlineHelpText>This field does not get mapped to the opportunity.</inlineHelpText>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Show_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prospect didn’t show up. Maps against no show button</description>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Orgs__c</fullName>
        <description>Number of orgs in the production environment.</description>
        <inlineHelpText>Number of orgs in the production environment.</inlineHelpText>
        <label>No. of Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OA__CLOSED_ACTIVITIES__c</fullName>
        <label>Closed Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__OPEN_ACTIVITIES__c</fullName>
        <label>Open Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <description>This field is used for the batch lead conversion and should be left blank.</description>
        <label>OrgId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orgs_Managed__c</fullName>
        <label>Orgs Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Actively_being_sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if a Prospect is Active in a sequence.</description>
        <label>Actively being sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Name__c</fullName>
        <label>Current Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Status__c</fullName>
        <label>Current Sequence Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
        <label>Current Sequence Step Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
        <label>Current Sequence Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Task_Due_Date__c</fullName>
        <label>Current Sequence Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_User_Name__c</fullName>
        <description>This field lists the name of the sequencer.</description>
        <label>Current Sequence User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Finished_Sequence__c</fullName>
        <description>Imports a list of sequences the Prospect has finished in comma-spearated format.
Note: Requires mapping the Finished Sequence field in Salesforce.</description>
        <label>Finished Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Sequences__c</fullName>
        <description>This field lists how many sequences the Prospect is currently active in.</description>
        <label>Number of Active Sequences</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Tasks__c</fullName>
        <description>This field lists how many incomplete tasks are associated with the Prospect.</description>
        <label>Number of Active Tasks</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Tag__c</fullName>
        <label>Pardot Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Prospect_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from Lead Field to Parent/Global Prospect Company</description>
        <label>Parent Prospect Company</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Make sure you are searching for a global/parent company.</errorMessage>
            <filterItems>
                <field>Prospect_Company__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Global Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Prospect_Company__c</referenceTo>
        <relationshipLabel>Leads (Parent Prospect Company)</relationshipLabel>
        <relationshipName>ParentProsLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Interest_CI_CD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value syncs from Pardot when it is selected on the multi-select checkbox (Product_Interest__c)</description>
        <inlineHelpText>Synced from Pardot; This is checked if prospect expressed interest in CI/CD products from the pardot form</inlineHelpText>
        <label>Product Interest: CI/CD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Interest_Security_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value syncs from Pardot when it is selected on the multi-select checkbox (Product_Interest__c)</description>
        <inlineHelpText>Synced from Pardot; This is checked if prospect expressed interest in Security &amp; Compliance products from the pardot form</inlineHelpText>
        <label>Product Interest: Security &amp; Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Interest_Test_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value syncs from Pardot when it is selected on the multi-select checkbox (Product_Interest__c)</description>
        <inlineHelpText>Synced from Pardot; This is checked if prospect expressed interest in Test Automation products from the pardot form</inlineHelpText>
        <label>Product Interest: Test Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect Company</label>
        <referenceTo>Prospect_Company__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_unqualified__c</fullName>
        <inlineHelpText>Can&apos;t find the reason you&apos;re looking for? Select &quot;Other&quot; and email you SF admin to add a new picklist value for you</inlineHelpText>
        <label>Reason unqualified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid/fake contact information</fullName>
                </value>
                <value>
                    <fullName>Could not reach after 7 touches</fullName>
                </value>
                <value>
                    <fullName>Kicking Tires</fullName>
                </value>
                <value>
                    <fullName>Their is no need / company is too small</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Campaign_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of US-0031024 with automation to populate when a Lead/Contact is associated to a Campaign Member record when a Campaign Member record is created.</description>
        <label>Recent Campaign Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <description>Generates the number that will be used in assignment rules to assign Leads to different users.</description>
        <formula>MOD(VALUE(Lead_Number__c) ,3)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_DB_Type__c</fullName>
        <label>SFDC DB Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Account Executive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIGSTR__R_Score__c</fullName>
        <label>R Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__SigstrSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SigstrSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Administrators__c</fullName>
        <label>Salesforce Administrators</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slintel_Created_By__c</fullName>
        <label>Slintel Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Slintel Lead Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Slintel_Lead_City__c</fullName>
        <label>Slintel Lead City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_City__c</fullName>
        <label>Slintel Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Country__c</fullName>
        <label>Slintel Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Description__c</fullName>
        <label>Slintel Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_EBITDA__c</fullName>
        <label>Slintel Company EBITDA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Facebook_Page__c</fullName>
        <label>Slintel Company Facebook Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Fiscal_Year__c</fullName>
        <label>Slintel Company Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Function__c</fullName>
        <label>Slintel Company Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Funding__c</fullName>
        <label>Slintel Company Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Industry__c</fullName>
        <label>Slintel Company Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_LinkedIn_Page__c</fullName>
        <label>Slintel Company LinkedIn Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Name__c</fullName>
        <label>Slintel Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Phone_Number__c</fullName>
        <label>Slintel Company Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Product_And_Service__c</fullName>
        <label>Slintel Company Product And Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Revenue__c</fullName>
        <label>Slintel Company Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Sector__c</fullName>
        <label>Slintel Company Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Size__c</fullName>
        <label>Slintel Company Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_State__c</fullName>
        <label>Slintel Company State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Technologies__c</fullName>
        <label>Slintel Company Technologies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Twitter_Page__c</fullName>
        <label>Slintel Company Twitter Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Company_Type__c</fullName>
        <label>Slintel Company Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Country__c</fullName>
        <label>Slintel Lead Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Decision_Making_Power__c</fullName>
        <label>Slintel Lead Decision Making Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Division__c</fullName>
        <label>Slintel Lead Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Email_Confidence__c</fullName>
        <label>Slintel Lead Email Confidence</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Id__c</fullName>
        <label>Slintel Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_LinkedIn_Url__c</fullName>
        <label>Slintel Lead LinkedIn Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Phone__c</fullName>
        <label>Slintel Lead Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_State__c</fullName>
        <label>Slintel Lead State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Title__c</fullName>
        <label>Slintel Lead Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>